--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best site building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html website development</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -294,7 +294,7 @@
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
-                                      <h4 class="item-title">Product Launch|Market Expansion</h4>
+                                      <h4 class="item-title">Product|Market Launch</h4>
                                       <h5 class="item-subtitle"><div>Introduce new product or enter new market with pre-launch readiness, launch events, post-launch actions.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
