--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg website building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free responsive web builder software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
