--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html website development</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web building</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -397,7 +397,7 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Customer Advocacy</h4>
-                                      <h5 class="item-subtitle"><div><span style="letter-spacing: 0px; line-height: 0.9;">Cultivate customer advocates and referrals by designing and implementing programs.</span></div></h5>
+                                      <h5 class="item-subtitle"><div><span style="letter-spacing: 0px; line-height: 0.9;">Cultivate customer advocates and referrals by designing and implementing programs for customer engagement and evangelism.</span></div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
