create github pages

--- a/non-profits.html
+++ b/non-profits.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop website creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web builder software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">Marketing For Impact</h3>
-                <small class="mbr-section-subtitle">Over 1.5 million nonprofits in the US are competing for mindshare for various missions. How do you gain mindshare for your mission and marketshare for your programs with limited marketing budgets, staff or capability? Build your own Marketing-As-Service to take on your specific brand, market, fundraising or stewardship objective.<br></small>
+                <small class="mbr-section-subtitle">Over 1.5 million nonprofits in the US are competing for mindshare for their missions. How do you gain mindshare for your mission and marketshare for your programs with limited marketing budgets, staff or capability? Build your own Marketing-As-Service to take on your specific brand, market, fundraising or stewardship objective.<br></small>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
                                         <span class="iconBackground"><span class="icon"><span class="mbri-play mbr-iconfont-features6" style="color: rgb(102, 102, 102);"></span></span></span>
                                         <div>
                                             <h4 class="h-black">SUSTAIN</h4>
-                                            <p class="mbr-section-text-gray lead h-black">Engage constituents, run stewardship programs, generate ambassadors, capture donor voice into programs and outreach.<br></p>
+                                            <p class="mbr-section-text-gray lead h-black">Engage constituents, run stewardship programs, generate ambassadors, capture constituent voice into programs and outreach.<br></p>
                                         </div>
                                         
                                 </div>
@@ -213,7 +213,7 @@
 
                     </div>
 
-                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                 </div>
 
@@ -224,10 +224,10 @@
 
                         <small class="feature-subtitle">Content | Communications | Digital &amp; Offline</small>
 
-                        <p class="description">Orchestrate conversations and content across channels - digital (web, search, social, email, ads) &amp; offline (PR, events). Build awareness for organization mission &amp; programs and engage donors via trigger and planned campaigns. Track, test, tune tactics.<br></p>
+                        <p class="description">Orchestrate conversations and content across channels - digital (web, search, social, email, ads) &amp; offline (PR, events). Build awareness for organization mission &amp; programs and engage constituents via trigger and planned campaigns. Track, test, tune tactics.<br></p>
 
                     </div>
-                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                 </div>
 
@@ -241,7 +241,7 @@
 
                 <div class="features-box">
 
-                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6"></span></div>
+                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                     <div class="content">
 
@@ -256,7 +256,7 @@
 
                 <div class="features-box last">
 
-                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6"></span></div>
+                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                     <div class="content">
 
@@ -301,7 +301,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4c" style="background-color: rgb(54, 54, 54); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">(c) 2016 SAASIFY LLC. All rights reserved.<br></p>
+        <p class="text-xs-center">(c) 2017 SAASIFY LLC. All rights reserved.<br></p>
     </div>
 </footer>
 
