--- a/privacy.html
+++ b/privacy.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free offline website building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2y" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web page design software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2y" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -108,7 +108,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-30" style="background-color: rgb(54, 54, 54); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">(c) 2016 SAASIFY LLC. All rights reserved.<br></p>
+        <p class="text-xs-center">(c) 2017 SAASIFY LLC. All rights reserved.<br></p>
     </div>
 </footer>
 
