--- a/startups.html
+++ b/startups.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap site development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web site building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -213,7 +213,7 @@
 
                     </div>
 
-                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                 </div>
 
@@ -227,7 +227,7 @@
                         <p class="description">Validate market readiness and brand promise. Assess product capabilities against customer needs/pains, competition/alternatives. Guide product roadmap and market positioning.&nbsp;<br></p>
 
                     </div>
-                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                 </div>
 
@@ -241,7 +241,7 @@
 
                 <div class="features-box">
 
-                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6"></span></div>
+                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                     <div class="content">
 
@@ -256,7 +256,7 @@
 
                 <div class="features-box last">
 
-                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6"></span></div>
+                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
 
                     <div class="content">
 
@@ -301,7 +301,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3d" style="background-color: rgb(54, 54, 54); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">(c) 2016 SAASIFY LLC. All rights reserved.<br></p>
+        <p class="text-xs-center">(c) 2017 SAASIFY LLC. All rights reserved.<br></p>
     </div>
 </footer>
 
