--- a/contact.html
+++ b/contact.html
@@ -72,14 +72,14 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg website design software download</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">html web building software download</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-xs-center">
                     <h3 class="mbr-section-title display-2">CONNECT WITH US</h3>
-                    <small class="mbr-section-subtitle">We'd love to discuss your growth challenge!<br><br><strong>hello@saasify.io<br>+1 (703) 597-3433</strong><br></small>
+                    <small class="mbr-section-subtitle">We'd love to discuss your growth challenge!<br><br><strong>hello@saasify.io<br>+1 (434) TRY-SAAS</strong><br></small>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONNECT WITH US">
 
-                        <input type="hidden" value="b6pVBcAjaKskdk0SsJkLu6UVZ94LBA2InYEO4C3hR0PaCI9nFEviik/DcGrEiC00DVF37X63y1a0sUBjfzyaqleadbSXn44jccaIoXGK7J8BHVankKtU3K5R4ntbUc1W" data-form-email="true">
+                        <input type="hidden" value="yY0KkacXKAVZ2V/elT/ymNBIrA/FutfXtNRJpssfBf92hVb99T2xqc9P27lBHVHPg+5xKL2yrKr6cwnXGV8Gy3jhDDQLwKURhSkjdVgOW8wN5vzHfkrolz8IzexebMFr" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -153,7 +153,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-26" style="background-color: rgb(54, 54, 54); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">(c) 2016 SAASIFY LLC. All rights reserved.<br></p>
+        <p class="text-xs-center">(c) 2017 SAASIFY LLC. All rights reserved.<br></p>
     </div>
 </footer>
 
